--- a/style.css
+++ b/style.css
@@ -61,3 +61,60 @@ footer{
     font-family: inherit;
     padding: 1em 4em;
 }
+
+/* Display Modal */
+.modal {
+    display: none; /*Hidden by default*/
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+  }
+    /* Modal Content/Box */
+.modal-content {
+    
+    text-align: center;
+    font-family: inherit;
+    background-color: var(--bg-clr);
+    color: var(--clr-2);
+    margin: 15% auto; /* 15% from the top and centered */
+    padding: 1.5em;
+    border: 1px solid #888;
+    width:30%; /*Could be more or less, depending on screen size*/
+    display: flex;
+    flex-direction: column;
+    justify-items: center;
+    align-items: center;
+    gap: 2em;
+    border-radius: 1em;
+}
+.mark{
+    margin-top: 0.75em;
+    cursor: pointer;
+}
+.active,.mark:hover{
+    background-color: var(--clr-1);
+}
+label,input{
+    display: inline-block;
+}
+input[type=text]{
+    width: 90%;
+    padding: 1em;
+    outline: none;
+    transition: 0.5s;
+}
+input[type=text]:focus{
+    border: 2px solid var(--clr-1) ;
+}
+.mark,.submit{
+    font-family: inherit;
+    padding: 1em 3em;
+    margin-left: 2em;
+}
+
